# web-doc-resolver

./: .cleanup-ignore  .codacy.yml  .deepsource.toml  .gitattributes  .gitignore  .ignore  .markdownlint.json  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  README.md  SECURITY.md  SKILL.md  config.toml  markdownlint.toml  pyproject.toml  requirements.txt
.Jules/: palette.md
.agents/skills/do-web-doc-resolver/: .env.example  .gitignore  SKILL.md  __init__.py  __main__.py  pyproject.toml  requirements.txt
.agents/skills/do-web-doc-resolver/evals/: evals.json
.agents/skills/do-web-doc-resolver/references/: CASCADE.md  CLI.md  CONFIG.md  PROVIDERS.md  RUST_CLI.md  TESTING.md
.agents/skills/do-web-doc-resolver/scripts/: cache_negative.py  models.py  providers_impl.py  quality.py  resolve.py  routing.py  routing_memory.py  synthesis.py  utils.py
.agents/skills/do-web-doc-resolver/tests/: conftest.py  test_circuit_breaker.py  test_providers.py  test_quality.py  test_resolve.py  test_routing.py
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.jules/: bolt.md  sentinel.md
agents-docs/: ADR-001-issue-decomposition.md  ASSETS.md  CASCADE.md  CLI.md  CONFIG.md  DEPLOYMENT.md  DEVELOPMENT.md  ISSUES.md  OVERVIEW.md  PROVIDERS.md  README.md  RELEASES.md  RUST_CLI.md  SEMANTIC_HEALTH.md  SEMANTIC_HEALTH_ISSUE.md  TESTING.md
assets/: README.md
cli/: Cargo.toml  config.toml  text
cli/benches/: compaction_bench.rs  link_validator_bench.rs  semantic_cache_bench.rs
cli/src/: bias_scorer.rs  circuit_breaker.rs  cli.rs  compaction.rs  config.rs  error.rs  lib.rs  link_validator.rs  main.rs  metrics.rs  negative_cache.rs  output.rs  quality.rs  resolver.rs  routing.rs  routing_memory.rs  semantic_cache.rs  startup.rs  synthesis.rs  types.rs
cli/src/config/: defaults.rs  mod.rs  parsing.rs
cli/src/providers/: direct_fetch.rs  docling.rs  duckduckgo.rs  exa_mcp.rs  exa_sdk.rs  firecrawl.rs  jina.rs  llms_txt.rs  mistral_browser.rs  mistral_websearch.rs  mod.rs  ocr.rs  rate_limiter.rs  serper.rs  tavily.rs
cli/src/resolver/: cascade.rs  mod.rs  query.rs  url.rs
cli/src/semantic_cache/: mod.rs  ops.rs  synthesis.rs  tests.rs
cli/tests/: bias_scorer.rs  circuit_breaker.rs  link_validator.rs  negative_cache.rs  profile_thresholds.rs  quality.rs  quality_gate.rs  routing.rs  semantic_cache.rs  startup_prewarm.rs  startup_semaphore.rs
cli/ui/: .stylelintrc.json  AGENTS.md  DESIGN.md  index.html  playwright.config.ts
cli/ui/.storybook/: preview.ts
cli/ui/components/: README.md  badge.css  badge.stories.ts  bottom-nav.css  button.css  button.stories.ts  cache-restore.css  card.css  card.stories.ts  codeblock.css  command-bar.css  datatable-extended.css  datatable.css  healthcheck.css  history-card.css  history-filters.css  icon-rail.css  input.css  input.stories.ts  keyvalue.css  markdown-viewer.css  modal.css  nav-shell.css  panel.css  profile-selector.css  progress.css  progress.stories.ts  provider-settings.css  resizable.css  sidebar-collapsed.css  sidebar.css  stepper.css  streamindicator.css  telemetry.css  tooltip.css  web-crypto.css
cli/ui/figma/: tokens-export.json
cli/ui/layouts/: accessibility.css  responsive.css
cli/ui/scripts/: validate-css.mjs
cli/ui/stitch/: DESIGN.md
cli/ui/stories/: README.md
cli/ui/styles/: dark.css  globals.css  theme-toggle.css
cli/ui/tests/: e2e.spec.ts
cli/ui/tokens/: build-tokens.sh  design_tokens.css  motion.css  primitives.json  semantic.json  spacing.css  typography.css
docs/: index.md  jules-gh-cli-setup-guide.md  semantic_health_report.md  standards.md
migrations/: 001_provider_quota_usage.sql  001_routing_memory.sql
plans/: 009-cross-runtime-analysis.md  01-architecture-improvements.md  012-correctness-and-safety-fixes.md  013-test-coverage-and-ci-reliability.md  014-architecture-and-parity.md  02-new-providers.md  03-performance-optimization.md  04-new-features.md  05-ui-ux-improvements.md  06-testing-improvements.md  07-documentation-improvements.md  08-deep-research.md  09-github-workflows-goap-adr.md  10-pr341-quality-gate-fixes.md  11-cache-prewarming.md  15-GOAP-NEXT-PHASE.md  16-GOAP-WAVE2-6.md  17-NIGHTLY-BRIDGE-PR.md  18-GOAP-PR-ORCHESTRATION.md  19-ci-serper-integration.md  20-GOAP-STATE-UPDATE.md  21-codebase-improvement-2026-06.md  402-technical-debt-p0.md  AI_AGENT_INSTRUCTIONS_ANALYSIS.md  ANALYSIS_RESULTS.md  ANALYSIS_SUMMARY.md  AUDIT.md  BUGS_AND_ISSUES.md  CI_FIX.md  CLI_TEST_RESULTS_2026_03_27.md  CLI_VERIFICATION.md  CLI_VERIFICATION_2026_03_28.md  CODEBASE_ANALYSIS_2026_03_27.md  CODEBASE_ANALYSIS_2026_03_29.md  CODEBASE_AUDIT_2026_04_01.md  COMPREHENSIVE_VALIDATION_PROGRESS.md  ESLINT_CONFIG_UPDATE.md  EXA_MCP_ANALYSIS.md  FEATURE_IMPROVEMENTS_2026_04_01.md  GOAP_FOLLOWUP.md  (+10 more)
references/: CASCADE.md
samples/: README.md  sample_basic.py  sample_with_keys.py
scripts/: _cascade.py  _query_resolve.py  _routing_utils.py  _url_resolve.py  cache_negative.py  changelog.sh  circuit_breaker.py  cli.py  constants.py  diagnose_providers.py  doc_checkers_1.py  doc_checkers_2.py  doc_fixers.py  doc_models.py  doc_validator.py  generate_changelog.py  models.py  monitor_providers.py  pre-commit-hook.sh  provider_decorator.py  providers_impl.py  quality.py  quality_gate.sh  release.sh  resolve.py  resolve_cli.py  routing.py  routing_memory.py  semantic_cache.py  state.py  sync_skill.py  sync_versions.py  synthesis.py  utils.py  validate_docs.py  validate_skill_symlink.py
tests/: bench_quality.py  conftest.py  test_doc_models.py  test_doc_validator.py  test_html_extraction.py  test_live_api_integrations.py  test_monitor_providers.py  test_perf_utils.py  test_quality_real.py  test_resolve.py  test_resolve_cli.py  test_utils.py  (+13 more)
(+220 files in other folders)
