[project]
name = "do-web-doc-resolver"
version = "0.3.1"
description = "Resolve queries or URLs into compact, LLM-ready markdown using a low-cost cascade"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "d-oit"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
keywords = ["llm", "markdown", "web-scraping", "documentation", "agent", "skill"]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]
all = [
    "exa-py>=1.0.0",
    "tavily-python>=0.3.0",
    "firecrawl-py>=0.0.5",
    "mistralai>=1.0.0",
    "ddgs>=2.0.0",
    "diskcache>=5.6.0",
]

[project.scripts]
do-wdr = "scripts.cli:main"
do-web-doc-resolver = "scripts.cli:main"

[project.urls]
Homepage = "https://github.com/d-oit/do-web-doc-resolver"
Documentation = "https://github.com/d-oit/do-web-doc-resolver#readme"
Repository = "https://github.com/d-oit/do-web-doc-resolver"
Issues = "https://github.com/d-oit/do-web-doc-resolver/issues"
Changelog = "https://github.com/d-oit/do-web-doc-resolver/releases"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
    | web/node_modules
    | \.agents/skills
    | \.blackbox/skills
    | \.claude/skills
    | \.opencode/skills
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".agents/skills/", ".blackbox/skills/", ".claude/skills/", ".opencode/skills/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ".(agents|blackbox|claude|opencode)/skills/"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "live: marks tests as live integration tests requiring real API keys (deselect with '-m not live')",
    "benchmark: enables pytest-benchmark style tests without plugin",
]
