[package]
name = "do-wdr"
version = "1.1.0"
edition = "2024"
rust-version = "1.85"
description = "Web Documentation Resolver CLI"
license = "MIT"
authors = ["d-oit"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
async-trait = "0.1"
urlencoding = "2"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
regex = "1"
futures = "0.3"

# Semantic cache (optional - uses Turso/libsql internally)
chaotic_semantic_memory = { version = "0.2", optional = true }

[features]
default = []
semantic-cache = ["dep:chaotic_semantic_memory"]

[dev-dependencies]
mockall = "0.14"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "semantic_cache_bench"
harness = false
path = "benches/semantic_cache_bench.rs"

[[bin]]
name = "do-wdr"
path = "src/main.rs"

[lib]
name = "do_wdr_lib"
path = "src/lib.rs"
