[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[project]
name = "do-web-doc-resolver"
version = "0.1.0"
description = "Resolve URLs and queries into compact, LLM-ready markdown documentation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
providers = [
    "exa-py>=1.0.0",
    "tavily-python>=0.3.0",
    "firecrawl-py>=0.0.5",
    "mistralai>=2.0.0",
    "ddgs>=1.0.0",
    "httpx>=0.27.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests requiring live API keys (deselect with '-m \"not live\"')",
]
